<resources>
    <string name="app_name">罐罐宝</string>

    <string name="login_app_name">绿享生活罐罐宝</string>
    <string name="login_recycle_name">智能回收机</string>

    <string name="user_name">蔡易儒</string>
    <string name="user_phone">15618010053</string>

    <string name="title_loginPageTitle">会员登入</string>
    <string name="user_name_hint">请输入帐号</string>
    <string name="user_password_hint">请输入密码</string>
    <string name="title_loginButton">登入</string>
    <string name="title_register">注册</string>
    <string name="title_forgetPassword">忘记密码?</string>
    <string name="title_logout">登出</string>

    <string name="title_register_page">我要注册</string>
    <string name="desc_registerHeaderImage">registerHeaderImage</string>
    <string name="title_register_account">帐号：</string>
    <string name="hint_register_agreePolicy">请输入帐号</string>
    <string name="title_register_phoneNumber">手机号：</string>
    <string name="hint_register_phoneNumber">请输入手机号</string>
    <string name="title_register_mail">邮箱：</string>
    <string name="hint_register_mail">请输入邮箱</string>
    <string name="title_register_password">密码：</string>
    <string name="hint_register_password">请输入密码</string>
    <string name="title_register_confirmPassword">确认密码：</string>
    <string name="hint_register_confirmPassword">请再次入密码</string>
    <string name="title_register_agreePolicy">我已阅读并同意服务条款</string>
    <string name="title_register_policy">服务条款</string>
    <string name="title_register_submit">提交</string>

    <string name="title_location_permission">此应用程序需要位置权限</string>
    <string name="text_location_permission">此应用程序需要位置权限</string>
    <string name="ok">确定</string>

    <string name="hint_username_password_input_null">帐号密码不可为空！！</string>

    <string name="error_login_fail">登入失败...请检查帐号密码"</string>

    <string name="title_home">主页</string>
    <string name="title_notifications">消息</string>
    <string name="title_qrscanner">扫码回收</string>
    <string name="title_settings">设置</string>

    <string name="title_scanner_success">扫码完成</string>
    <string name="content_numCount_scanner_success_prefix">您在本次成功回收</string>
    <string name="content_numCount_scanner_success_suffix">个宝特瓶</string>
    <string name="content_weightCount_scanner_success_prefix">宝特瓶总重量为</string>
    <string name="content_coalCount_scanner_success_prefix">减少</string>
    <string name="content_coalCount_scanner_success_suffix">g碳足迹</string>
    <string name="content_point_scanner_success_prefix">共获得</string>
    <string name="content_point_scanner_success_suffix">积分</string>

    <string name="unit_co2_gram">克</string>
    <string name="title_total_co2">减少碳足迹</string>
    <string name="unit_bottle">个</string>
    <string name="unit_point">分</string>
    <string name="unit_money">元</string>
    <string name="title_total_bottles">累积数量</string>
    <string name="title_total_points">当前积分</string>
    <string name="title_total_rewards">累积现金</string>

    <string name="bar_title_settings">系统设置</string>
    <string name="title_edit_personal">帐号设定</string>
    <string name="title_edit_general">通用设定</string>
    <string name="title_edit_privacy">隐私设定</string>
    <string name="title_help">系统求助</string>
    <string name="title_about">关于软件</string>

    <string name="home_info_msg_01">· 10月份已回收45个宝特瓶</string>
    <string name="home_info_msg_02">· 本月您的环保奖章已升级成为金牌</string>


    <string name="opinion_title">意见反馈</string>
    <string name="opinion_abnormal">功能异常</string>
    <string name="opinion_suggestion">产品建议：不好用，我有建议</string>
    <string name="opinion_other">其他问题</string>
    <string name="opinion_text">请补充详细问题或意见</string>
    <string name="opinion_sent">提交</string>
    <string name="opinion_hint">请输入不大于20字的描述</string>
    <string name="opinion_thank">感谢您给予的宝贵意见，系统将尽快处理您的问题及建议。</string>
    <string name="opinion_back">返回首页</string>

    <string name="about">关于</string>
    <string name="about_app_version">版本</string>
    <string name="about_app_information">版权信息</string>
    <string name="version_unknown">未知版本</string>


    <string name="setting_title">通用管理</string>
    <string name="setting_language">语言</string>
    <string name="setting_system">系统通知提醒</string>
    <string name="setting_sound">声音</string>
    <string name="setting_vibration">震动</string>
    <string name="setting_event">活动通知提醒</string>
    <string name="setting_news">新闻推播通知</string>

    <string name="user_file_key">user_data_file_test</string>
    <string name="no_geo_result">查无结果</string>

    <string name="market_title_cash">提现</string>
    <string name="market_title_drawer">抽奖</string>
    <string name="market_title_lottery">刮刮卡</string>
    <string name="market_title_gift_info">抽獎資訊</string>

    <string name="unit_draw_cash_points">積分</string>
    <string name="unit_draw_cash_money">元</string>
    <string name="alert_confirm_buy_product_title">確認兌換</string>
    <string name="alert_confirm_buy_product_msg">您確定要兌換</string>
    <string name="alert_not_enough_point_title">積分不足</string>
    <string name="alert_not_enough_points_msg">請再接再厲，多回收一些塑料瓶賺積分唷！</string>
    <string name="alert_ok_title">確定</string>
    <string name="alert_confirm_buy_title">確認兌換</string>
    <string name="alert_cancel_buy_title">取消兌換</string>

    <string name="exchange_success_title">提現成功</string>
    <string name="exchange_success_msg">恭喜您以500積分\n成功提現2.5元</string>

    <string name="weather_live">实时</string>
    <string name="weather_forecast">预报</string>
    <string name="report_time">发布时间</string>
    <string name="title_activity_draw_cash_success">DrawCashSuccessActivity</string>
</resources>
