<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.enjoygreenlife.guanguanbao.controller.login.RegisterActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:contentDescription="@string/desc_registerHeaderImage"
        app:srcCompat="@drawable/register_header_image" />

    <TextView
        android:id="@+id/title_register_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="20sp"
        android:text="@string/title_register_page"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="30sp"
        android:paddingRight="30sp">

        <TextView
            android:id="@+id/title_register_account"
            android:layout_width="100sp"
            android:layout_height="40sp"
            android:gravity="center_vertical"
            android:text="@string/title_register_account"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_register_account"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/hint_register_agreePolicy"
            android:inputType="text|textNoSuggestions" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="30sp"
        android:paddingRight="30sp">

        <TextView
            android:id="@+id/title_register_phoneNumber"
            android:layout_width="100sp"
            android:layout_height="40sp"
            android:gravity="center_vertical"
            android:text="@string/title_register_phoneNumber"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_register_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginRight="10sp"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/hint_register_phoneNumber"
            android:inputType="textNoSuggestions|phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="30sp"
        android:paddingRight="30sp">

        <TextView
            android:id="@+id/title_register_mail"
            android:layout_width="100sp"
            android:layout_height="40sp"
            android:gravity="center_vertical"
            android:text="@string/title_register_mail"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_register_mail"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginRight="10sp"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/hint_register_mail"
            android:inputType="textNoSuggestions|textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="30sp"
        android:paddingRight="30sp">

        <TextView
            android:id="@+id/title_register_password"
            android:layout_width="100sp"
            android:layout_height="40sp"
            android:gravity="center_vertical"
            android:text="@string/title_register_password"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_register_password"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginRight="10sp"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/hint_register_password"
            android:inputType="text|textNoSuggestions|textPersonName|textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="30sp"
        android:paddingRight="30sp">

        <TextView
            android:id="@+id/title_register_confirmPassword"
            android:layout_width="100sp"
            android:layout_height="40sp"
            android:gravity="center_vertical"
            android:text="@string/title_register_confirmPassword"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_register_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginRight="10sp"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/hint_register_confirmPassword"
            android:inputType="text|textNoSuggestions|textPersonName|textPassword"
            android:password="false" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox_agreement"
        style="@android:style/Widget.DeviceDefault.Light.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:text="@string/title_register_agreePolicy" />

    <Button
        android:id="@+id/register_submit"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100sp"
        android:layout_marginRight="100sp"
        android:layout_marginTop="20sp"
        android:background="@android:color/holo_green_light"
        android:text="@string/title_register" />

</LinearLayout>
