<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.enjoygreenlife.guanguanbao.view.login.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="20sp"
                android:background="@color/colorGreen" />

            <TextView
                android:id="@+id/circle01"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginLeft="250sp"
                android:background="@drawable/circle_drawable"
                android:backgroundTint="@color/colorGreen" />

            <TextView
                android:id="@+id/circle02"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginLeft="270sp"
                android:layout_marginTop="50sp"
                android:background="@drawable/circle_drawable"
                android:backgroundTint="@color/colorYellowGreen" />

            <TextView
                android:id="@+id/circle03"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginLeft="230sp"
                android:layout_marginTop="100sp"
                android:background="@drawable/circle_drawable"
                android:backgroundTint="@color/colorBlueGreen" />

            <TextView
                android:id="@+id/title_recycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150sp"
                android:layout_marginTop="210dp"
                android:text="@string/login_recycle_name"
                android:textColor="@color/colorGrassGreen"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_green_life"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/title_recycle"
                android:layout_marginTop="160sp"
                android:text="@string/login_app_name"
                android:textAlignment="textEnd"
                android:textColor="@color/colorGrassGreen"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"

                android:layout_marginTop="120sp"
                android:paddingLeft="60sp"
                android:paddingRight="20sp"
                app:srcCompat="@drawable/img_loginpage_icon_tree" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="40sp"
            android:paddingRight="40sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8sp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30sp"
                    android:text="@string/title_loginPageTitle"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <EditText
                    android:id="@+id/userNameTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:ems="10"
                    android:hint="@string/user_name_hint"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/userPasswordTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:ems="10"
                    android:hint="@string/user_password_hint"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40sp"
                    android:layout_marginRight="40sp"
                    android:layout_marginTop="30sp"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:text="@string/title_loginButton" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40sp"
                    android:layout_marginRight="40sp"
                    android:layout_marginTop="10sp">

                    <TextView
                        android:id="@+id/registerButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/title_register"
                        android:textColor="@color/colorGrassGreen" />

                    <TextView
                        android:id="@+id/forgetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/title_forgetPassword"
                        android:textColor="@color/colorGrassGreen" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
