<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.enjoygreenlife.guanguanbao.controller.settings.SettingsMenuActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorGreen"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:background="@color/colorGreen"
        android:paddingLeft="15sp"
        android:paddingRight="15sp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/icon_personal_pic"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_user" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_alignBottom="@id/icon_personal_pic"
                android:layout_alignRight="@id/icon_personal_pic"
                app:srcCompat="@drawable/img_gold_medal" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_toRightOf="@id/icon_personal_pic"
                android:paddingTop="4sp"
                android:text="@string/user_name" />

            <TextView
                android:id="@+id/user_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/icon_personal_pic"
                android:layout_marginLeft="10sp"
                android:layout_toRightOf="@id/icon_personal_pic"
                android:paddingBottom="4sp"
                android:text="@string/user_phone" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">

        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/shape_rectangle_for_sent"
            android:text="@string/title_logout" />

        <ListView
            android:id="@+id/setting_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>

    </RelativeLayout>
</LinearLayout>
